# utf8.c

./: .clangd  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  append.c
include/: byte.h  grapheme.h  path.h  test.h
src/: byte.c  codepoint.c  grapheme-data.c  grapheme.c  path.c  test.c
tests/: CMakeLists.txt  test_utf8_byte.c
unicode/: grapheme.py
